ConnectionString for windows authentication

--- a/API/Employee/appsettings.json
+++ b/API/Employee/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeDBCon": "Server=localhost; Database=EmployeeDB; User=YourUserName; Password=YourPassword; Encrypt=true; TrustServerCertificate=true;"
+    "EmployeeDBCon": "Server=YourServerName; Database=EmployeeDB; Trusted_Connection=True; Encrypt=False"
   }
 }
-
